added deployment notes for jboss eap, wildfly, tomcat